[package]
name = "todo_tasks"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "lib.rs"
name = "todo_tasks_lib"

[[bin]]
path = "src/main.rs"
name = "todo_tasks"

[dependencies]
slint = { version = "1.7.1" ,features = ["serde", "backend-android-activity-06"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.7.1" }

[dev-dependencies]
i-slint-backend-testing = "1.7.1"